# gallearn

./: .gitignore  Project.toml  README.md  commit.txt  conftest.py  environment.yml  gallearn.yml  pyproject.toml
.github/: config_ci.ini
.github/workflows/: ci.yml
GalLearn/: Manifest.toml  Project.toml  bound.py  cnn.py  cnn_viz.py  firebox_io.jl  host_finder.jl  image_loader.jl  make_ellipses.jl  objects.csv  preprocessing.py  properties.jl  sfr.jl  umap.ipynb  vel_map.jl  viz_samples.ipynb
dataset_hashes/: gallearn_data_256x256_11proj_wsat_wvmap_avg_sfr_tgt_mp.h5.json
docs/: status.md
gallearn/: Manifest.toml  Project.toml  __init__.py  __version__.py  bound.py  cnn.py  cnn_viz.py  config.py  dataset_lock.py  gen_octant_images.py  gen_octant_shapes.py  preprocessing.py  splitting.py  train.py  umap_viz.py  visual_checks.py  viz_samples.ipynb
scripts/: Project.toml  build_base_sysimage.jl  gen_all.py  gen_octant_images.py  gen_octant_shapes.py  gen_sfrs.jl  gen_vmaps.py  lock_dataset.py  run_cnn.py  split.py  train.py  transform_images.jl  transform_images.sh
splits/: split_gallearn_data_256x256_11proj_wsat_wvmap_avg_sfr_tgt_mp_v1.json  test_lock_v1.json
src/: Dataset.jl  GalLearn.jl  GalLearnConfig.jl  firebox_io.jl  host_finder.jl  image_loader.jl  make_ellipses.jl  properties.jl  vel_map.jl
tests/: make_ci_data.py  test_BernoulliNet.py  test_StandardNet.py  test_data_utils.py  test_gen_octant_images.py  test_gen_octant_shapes.py  test_splitting.py
tests/test_data/: AstroPhot_NewHost_bandr_Rerun_Sersic.csv  AstroPhot_Sate_Sersic_AllMeasure.csv  AstroPhot_octant_allgals_bandr_Sersic.csv  octant_shapes_astrophot_reference.csv  octant_shapes_fitsersic_reference.csv  octant_shapes_reference.csv  octant_shapes_reference.json
tests/test_data/host_band_ugr/: object_17026_host_ugrband_FOV12_p600.hdf5  object_561_host_ugrband_FOV21_p1050.hdf5  (+1 more)
(+11 files in other folders)
